[tool.poetry]
name = "libyear"
version = "0.2.1"
description = "A python library to calculate libyear for python depenencies"
authors = []
readme = "README.md"
keywords = [ "backmarket", "libyear",]


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
prettytable = "^3.10.0"
python-dateutil = "^2.9.0.post0"
setuptools = "^69.2.0"
packaging = "^24.0"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-sugar = "^0.9.4"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.23.0"
pytest-runner = "^6.0.1"
pytest-vcr = "^1.0.2"
coverage = "^7.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
